crates/ruau/tests/compile/ref_nounwindsafe.stderr
error[E0277]: the type `UnsafeCell<*mut ruau_sys::luau::lua::lua_State>` may contain interior mutability and a reference may not be safely transferable across a catch_unwind boundary
 --> tests/compile/ref_nounwindsafe.rs:8:18
  |
8 |     catch_unwind(move || table.set("a", "b").unwrap());
  |     ------------ ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `UnsafeCell<*mut ruau_sys::luau::lua::lua_State>` may contain interior mutability and a reference may not be safely transferable across a catch_unwind boundary
  |     |
  |     required by a bound introduced by this call
  |
  = help: within `ruau::state::raw::RawLuau`, the trait `RefUnwindSafe` is not implemented for `UnsafeCell<*mut ruau_sys::luau::lua::lua_State>`
note: required because it appears within the type `Cell<*mut ruau_sys::luau::lua::lua_State>`
 --> $RUST/core/src/cell.rs
  |
  | pub struct Cell<T: ?Sized> {
  |            ^^^^
note: required because it appears within the type `ruau::state::raw::RawLuau`
 --> src/state/raw.rs
  |
  | pub struct RawLuau {
  |            ^^^^^^^
  = note: required for `NonNull<ruau::state::raw::RawLuau>` to implement `UnwindSafe`
note: required because it appears within the type `WeakLuau`
 --> src/state/mod.rs
  |
  | pub struct WeakLuau {
  |            ^^^^^^^^
note: required because it appears within the type `ruau::types::value_ref::ValueRef`
 --> src/types/value_ref.rs
  |
  | pub struct ValueRef {
  |            ^^^^^^^^
note: required because it appears within the type `ruau::Table`
 --> src/table.rs
  |
  | pub struct Table(pub(crate) ValueRef);
  |            ^^^^^
note: required because it's used within this closure
 --> tests/compile/ref_nounwindsafe.rs:8:18
  |
8 |     catch_unwind(move || table.set("a", "b").unwrap());
  |                  ^^^^^^^
note: required by a bound in `std::panic::catch_unwind`
 --> $RUST/std/src/panic.rs
  |
  | pub fn catch_unwind<F: FnOnce() -> R + UnwindSafe, R>(f: F) -> Result<R> {
  |                                        ^^^^^^^^^^ required by this bound in `catch_unwind`

error[E0277]: the type `UnsafeCell<ruau::state::extra::ExtraData>` may contain interior mutability and a reference may not be safely transferable across a catch_unwind boundary
 --> tests/compile/ref_nounwindsafe.rs:8:18
  |
8 |     catch_unwind(move || table.set("a", "b").unwrap());
  |     ------------ ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `UnsafeCell<ruau::state::extra::ExtraData>` may contain interior mutability and a reference may not be safely transferable across a catch_unwind boundary
  |     |
  |     required by a bound introduced by this call
  |
  = help: the trait `RefUnwindSafe` is not implemented for `UnsafeCell<ruau::state::extra::ExtraData>`
  = note: required for `Rc<UnsafeCell<ruau::state::extra::ExtraData>>` to implement `RefUnwindSafe`
note: required because it appears within the type `ruau::state::raw::RawLuau`
 --> src/state/raw.rs
  |
  | pub struct RawLuau {
  |            ^^^^^^^
  = note: required for `NonNull<ruau::state::raw::RawLuau>` to implement `UnwindSafe`
note: required because it appears within the type `WeakLuau`
 --> src/state/mod.rs
  |
  | pub struct WeakLuau {
  |            ^^^^^^^^
note: required because it appears within the type `ruau::types::value_ref::ValueRef`
 --> src/types/value_ref.rs
  |
  | pub struct ValueRef {
  |            ^^^^^^^^
note: required because it appears within the type `ruau::Table`
 --> src/table.rs
  |
  | pub struct Table(pub(crate) ValueRef);
  |            ^^^^^
note: required because it's used within this closure
 --> tests/compile/ref_nounwindsafe.rs:8:18
  |
8 |     catch_unwind(move || table.set("a", "b").unwrap());
  |                  ^^^^^^^
note: required by a bound in `std::panic::catch_unwind`
 --> $RUST/std/src/panic.rs
  |
  | pub fn catch_unwind<F: FnOnce() -> R + UnwindSafe, R>(f: F) -> Result<R> {
  |                                        ^^^^^^^^^^ required by this bound in `catch_unwind`

error[E0277]: the type `UnsafeCell<usize>` may contain interior mutability and a reference may not be safely transferable across a catch_unwind boundary
 --> tests/compile/ref_nounwindsafe.rs:8:18
  |
8 |     catch_unwind(move || table.set("a", "b").unwrap());
  |     ------------ ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `UnsafeCell<usize>` may contain interior mutability and a reference may not be safely transferable across a catch_unwind boundary
  |     |
  |     required by a bound introduced by this call
  |
  = help: within `rc::RcInner<Cell<bool>>`, the trait `RefUnwindSafe` is not implemented for `UnsafeCell<usize>`
note: required because it appears within the type `Cell<usize>`
 --> $RUST/core/src/cell.rs
  |
  | pub struct Cell<T: ?Sized> {
  |            ^^^^
note: required because it appears within the type `rc::RcInner<Cell<bool>>`
 --> $RUST/alloc/src/rc.rs
  |
  | struct RcInner<T: ?Sized> {
  |        ^^^^^^^
  = note: required for `NonNull<rc::RcInner<Cell<bool>>>` to implement `UnwindSafe`
note: required because it appears within the type `std::rc::Weak<Cell<bool>>`
 --> $RUST/alloc/src/rc.rs
  |
  | pub struct Weak<
  |            ^^^^
note: required because it appears within the type `WeakLuau`
 --> src/state/mod.rs
  |
  | pub struct WeakLuau {
  |            ^^^^^^^^
note: required because it appears within the type `ruau::types::value_ref::ValueRef`
 --> src/types/value_ref.rs
  |
  | pub struct ValueRef {
  |            ^^^^^^^^
note: required because it appears within the type `ruau::Table`
 --> src/table.rs
  |
  | pub struct Table(pub(crate) ValueRef);
  |            ^^^^^
note: required because it's used within this closure
 --> tests/compile/ref_nounwindsafe.rs:8:18
  |
8 |     catch_unwind(move || table.set("a", "b").unwrap());
  |                  ^^^^^^^
note: required by a bound in `std::panic::catch_unwind`
 --> $RUST/std/src/panic.rs
  |
  | pub fn catch_unwind<F: FnOnce() -> R + UnwindSafe, R>(f: F) -> Result<R> {
  |                                        ^^^^^^^^^^ required by this bound in `catch_unwind`

error[E0277]: the type `UnsafeCell<bool>` may contain interior mutability and a reference may not be safely transferable across a catch_unwind boundary
 --> tests/compile/ref_nounwindsafe.rs:8:18
  |
8 |     catch_unwind(move || table.set("a", "b").unwrap());
  |     ------------ ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `UnsafeCell<bool>` may contain interior mutability and a reference may not be safely transferable across a catch_unwind boundary
  |     |
  |     required by a bound introduced by this call
  |
  = help: within `rc::RcInner<Cell<bool>>`, the trait `RefUnwindSafe` is not implemented for `UnsafeCell<bool>`
note: required because it appears within the type `Cell<bool>`
 --> $RUST/core/src/cell.rs
  |
  | pub struct Cell<T: ?Sized> {
  |            ^^^^
note: required because it appears within the type `rc::RcInner<Cell<bool>>`
 --> $RUST/alloc/src/rc.rs
  |
  | struct RcInner<T: ?Sized> {
  |        ^^^^^^^
  = note: required for `NonNull<rc::RcInner<Cell<bool>>>` to implement `UnwindSafe`
note: required because it appears within the type `std::rc::Weak<Cell<bool>>`
 --> $RUST/alloc/src/rc.rs
  |
  | pub struct Weak<
  |            ^^^^
note: required because it appears within the type `WeakLuau`
 --> src/state/mod.rs
  |
  | pub struct WeakLuau {
  |            ^^^^^^^^
note: required because it appears within the type `ruau::types::value_ref::ValueRef`
 --> src/types/value_ref.rs
  |
  | pub struct ValueRef {
  |            ^^^^^^^^
note: required because it appears within the type `ruau::Table`
 --> src/table.rs
  |
  | pub struct Table(pub(crate) ValueRef);
  |            ^^^^^
note: required because it's used within this closure
 --> tests/compile/ref_nounwindsafe.rs:8:18
  |
8 |     catch_unwind(move || table.set("a", "b").unwrap());
  |                  ^^^^^^^
note: required by a bound in `std::panic::catch_unwind`
 --> $RUST/std/src/panic.rs
  |
  | pub fn catch_unwind<F: FnOnce() -> R + UnwindSafe, R>(f: F) -> Result<R> {
  |                                        ^^^^^^^^^^ required by this bound in `catch_unwind`
